# AttentionCompression

./: .gitignore  FINDINGS.md  README.md  pyproject.toml
.githooks/: commit-msg
attention_compression/: __init__.py  attention_metrics.py  config.py  joint_qkv.py  pca.py  supervised_pca.py  windows.py
configs/: experiment_defaults.json
research/: FINDINGS.md  README.md
scripts/: 01_inspect_corpus.py  02_tokenize_to_shards.py  03_build_unigram_bigram_counts.py  04_score_windows.py  05_select_windows.py  06_sampling_diagnostics.py  07_activation_smoke_test.py  08_capture_layer_activations.py  09_capture_head_activations.py  10_supervised_pca_rrr.py  11_pca_spectrum.py  12_qkv_pca_drift.py  13_train_joint_qkv.py  14_model_surgery_smoke.py  15_check_reduced_head_activations.py  16_train_qk_dense_v.py  17_end_to_end_smoke.py  18_qk_dense_v_model_surgery_smoke.py  19_qk_dense_v_compare_outputs.py  20_qk_dense_v_finetune.py  21_inference_speed_benchmark.py  22_train_sealed_compressed_block.py  23_train_reduced_qk_dim.py  24_train_shared_qk_metric.py  25_train_dense_small_qk_logits.py  26_triton_lowrank_qk_benchmark.py  27_capture_layer_internals.py  28_head_pca_ffn_autoencoder.py  29_head_subspace_overlap.py  30_per_head_output_autoencoders.py  31_train_compressed_oproj_from_bottleneck.py  32_train_bottleneck_ffn_after_mimic_oproj.py  33_run_bottleneck_pipeline_all_layers.py  34_sweep_bottleneck_ffn_loss.py  35_wait_then_midlayer_ffn_grid.sh  36_select_ffn_loss_tradeoff.py  37_emit_refine_ffn_weights.py  38_cli_layer0_verify.py  39_layer0_oproj_swap_benchmark.py  (+11 more)
(+40 files in other folders)
